; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_command.c_mp_hook_start.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_command.c_mp_hook_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MPContext = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_hook_start(%struct.MPContext* %0, i8* %1) #0 {
  %3 = alloca %struct.MPContext*, align 8
  %4 = alloca i8*, align 8
  store %struct.MPContext* %0, %struct.MPContext** %3, align 8
  store i8* %1, i8** %4, align 8
  br label %5

5:                                                ; preds = %10, %2
  %6 = load %struct.MPContext*, %struct.MPContext** %3, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i64 @run_next_hook_handler(%struct.MPContext* %6, i8* %7, i32 0)
  %9 = icmp slt i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %5
  br label %5

11:                                               ; preds = %5
  ret void
}

declare dso_local i64 @run_next_hook_handler(%struct.MPContext*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
